--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   path_provider: ^2.0.11
   sqflite: 2.0.3
+  oktoast: ^3.3.1
 
 dev_dependencies:
   flutter_test:
