--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   path_provider: ^2.0.11
   sqflite: 2.0.3
   oktoast: ^3.3.1
+  adaptive_action_sheet: ^2.0.2
 
 dev_dependencies:
   flutter_test:
