--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   sqflite: 2.0.3
   oktoast: ^3.3.1
   adaptive_action_sheet: ^2.0.2
+  fl_chart: ^0.55.2
 
 dev_dependencies:
   flutter_test:
